feat(Tela Incial): Adicionado outras rotas e seus componentes

--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -7,7 +7,7 @@
       <app-side-bar></app-side-bar>
     </div>
     <div class="main">
-      <app-main></app-main>
+      <router-outlet />
     </div>
   </div>
 </div>
