--- a/Projeto/src/app/componentes/header/header.component.html
+++ b/Projeto/src/app/componentes/header/header.component.html
@@ -3,7 +3,7 @@
     <i class="fa-brands fa-linkedin-in"></i>
     <i class="fa-brands fa-github"></i>
   </div>
-  <div class="logo">Logo</div>
+  <div class="logo" [routerLink]="['/']">Logo</div>
   <div class="user">
     <div class="user-name">Usuário</div>
     <div class="user-image">US</div>
