feat(Listagem): Adicionando scroll infinito para a listagem

--- a/Projeto/src/app/components/characters/characters.component.html
+++ b/Projeto/src/app/components/characters/characters.component.html
@@ -1,10 +1,14 @@
 <div class="container">
   @for(character of characters; track character.id){
-    <div class="character-card">
-      <div class="character-name">
-        <h3>{{character.name}}</h3>
-      </div>
-      <img class="character-image" src="{{character.image}}" alt="">
+  <div class="character-card">
+    <div class="character-name">
+      <h3>{{ character.name }}</h3>
+      <h3>{{ character.episode.length }}</h3>
     </div>
+    <img class="character-image" src="{{ character.image }}" alt="">
+  </div>
   }
+  <div *ngIf="isLoading" class="loading-indicator">
+    <i class="fa-solid fa-circle-notch"></i>
+  </div>
 </div>
