--- a/Projeto/src/app/components/characters/characters.component.scss
+++ b/Projeto/src/app/components/characters/characters.component.scss
@@ -1,40 +1,24 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 90%;
-  margin: auto;
-  gap: 20px;
-}
-
-.character-card {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 10px;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-  width: 100%;
-  margin: 20px 0;
-
-  &:hover {
-    transform: scale(1.05);
-  }
-}
-
 .character-image {
   border-radius: 10px;
-  max-width: 100px;
-  height: auto;
+  height: 80%;
+  // max-width: 80%;
+  margin-left: 5%;
 }
 
-.character-name {
+.character-details {
   flex-grow: 1;
-  text-align: left;
-  margin-left: 20px;
+  text-align: center;
+  // padding-bottom: 100px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+  h3{
+    font-size: 40px;
+  }
+
+  p{
+    padding-top: 20px;
+    font-size: 20px;
+  }
 }
 
 @keyframes spin {
