--- a/Projeto/src/app/components/episodes/episodes.component.scss
+++ b/Projeto/src/app/components/episodes/episodes.component.scss
@@ -12,6 +12,16 @@
   }
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .loading-indicator {
   display: flex;
   justify-content: center;
@@ -24,4 +34,3 @@
   color: #555;
   animation: spin 2s linear infinite;
 }
-
