--- a/Projeto/src/app/app.component.scss
+++ b/Projeto/src/app/app.component.scss
@@ -34,6 +34,10 @@
   width: calc(100vw - 14px);
 }
 
+.no-padding-top {
+  padding-top: 0 !important; // Remove o padding-top quando for o perfil
+}
+
 @media only screen and (max-width: 1300px) {
   .container {
     grid-template-columns: 170px 1fr;
