--- a/Projeto/src/app/components/card/card.component.scss
+++ b/Projeto/src/app/components/card/card.component.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 40px auto;
+  margin-bottom: 60px;
   width: 60%;
   height: 300px;
   background-color: #f0f0f0;
