--- a/Projeto/src/app/components/header/header.component.scss
+++ b/Projeto/src/app/components/header/header.component.scss
@@ -9,7 +9,6 @@
 
   .social i {
     padding-right: 10px;
-
   }
 
   .logo {
@@ -18,22 +17,69 @@
     cursor: pointer;
   }
 
-  .user {
-    display: flex;
-    align-items: center;
-    font-weight: bold;
+  .user-menu-wrapper {
+    position: relative;
 
-    .user-image {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      border: 2px solid #fff;
-      background-color: rgb(11, 107, 185);
-      margin-left: 20px;
+    .user {
       display: flex;
       align-items: center;
-      justify-content: center;
       font-weight: bold;
+
+      .user-image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        background-color: rgb(11, 107, 185);
+        margin-left: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        cursor: pointer;
+
+        i {
+          color: #fff;
+          font-size: 24px;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    .user-menu {
+      position: absolute;
+      background-color: #ffffff;
+      color: rgb(11, 107, 185);
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      width: 200px;
+      top: 70px;
+      right: 0;
+      z-index: 1000;
+
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+          padding: 8px 16px;
+          border-bottom: 1px solid #ccc;
+
+          &:last-child {
+            border-bottom: none;
+          }
+
+          &:hover {
+            background-color: #f5f5f5;
+          }
+        }
+      }
     }
   }
 }
