--- a/Projeto/src/app/components/header/header.component.scss
+++ b/Projeto/src/app/components/header/header.component.scss
@@ -1,24 +1,62 @@
+@import "../../../styles/variables.scss";
+
 .header {
   height: 70px;
   padding: 20px 50px;
-  background-color: rgb(1, 38, 69);
-  color: #fff;
+  background-color: $primary-color;
+  color: $text-color;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.2);
 
-  .social i {
-    padding-right: 10px;
+  .social {
+    display: flex;
+    align-items: center;
+
+    a {
+      color: $text-color;
+      padding: 0 10px;
+
+      i {
+        font-size: 20px;
+      }
+    }
   }
 
   .logo {
-    font-weight: bold;
-    font-size: 20px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
     cursor: pointer;
+
+    img {
+      height: 50px; // Ajuste conforme o tamanho desejado
+    }
+  }
+
+  .centered {
+    justify-content: center;
+  }
+
+  .search-bar {
+    flex: 2;
+    max-width: 350px;
+    padding: 10px 20px;
+    margin: 0 20px;
+    border-radius: 5px;
+    border: 2px solid $aux-color;
+    background-color: $text-color;
   }
 
   .user-menu-wrapper {
-    position: relative;
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+
+    &.flex-zero {
+      flex: 0;
+    }
 
     .user {
       display: flex;
@@ -29,8 +67,8 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        border: 2px solid #fff;
-        background-color: rgb(11, 107, 185);
+        border: 2px solid $text-color;
+        background-color: $aux-color;
         margin-left: 20px;
         display: flex;
         align-items: center;
@@ -39,7 +77,7 @@
         cursor: pointer;
 
         i {
-          color: #fff;
+          color: $text-color;
           font-size: 24px;
         }
 
@@ -54,29 +92,39 @@
 
     .user-menu {
       position: absolute;
-      background-color: #ffffff;
-      color: rgb(11, 107, 185);
+      background-color: $bg-color;
+      color: $aux-color;
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
       width: 200px;
       top: 70px;
       right: 0;
       z-index: 1000;
+      border-radius: 0 0 5px 5px;
 
       ul {
         list-style: none;
         margin: 0;
         padding: 0;
+        cursor: pointer;
 
         li {
+          font-weight: bold;
           padding: 8px 16px;
-          border-bottom: 1px solid #ccc;
+          border-bottom: 1px solid $bg-color;
+          transition: all ease 0.2s;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
 
           &:last-child {
             border-bottom: none;
+            border-radius: 0 0 5px 5px;
           }
 
           &:hover {
-            background-color: #f5f5f5;
+            background-color: $aux-color;
+            color: $text-color;
           }
         }
       }
