--- a/Projeto/src/app/components/side-bar/side-bar.component.html
+++ b/Projeto/src/app/components/side-bar/side-bar.component.html
@@ -1,7 +1,5 @@
 <ul>
-  @for (item of items; track items) {
-  <li [routerLink]="item.link">
-    <span>{{item.title}}</span>
+  <li *ngFor="let item of items" [routerLink]="item.link" routerLinkActive="active">
+    <span>{{ item.title }}</span>
   </li>
-  }
 </ul>
