--- a/Projeto/src/styles/variables.scss
+++ b/Projeto/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #A7BB3E;
-$secondary-color:#e2ffd3;
+$secondary-color:#869636;
 $aux-color:#018a9c;
 $text-color:#fff;
 $bg-color:#f8f8f9;
