style(cards): Modificando aparência do Card

--- a/Projeto/src/styles/variables.scss
+++ b/Projeto/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #A7BB3E;
 $secondary-color:#869636;
 $aux-color:#018a9c;
+$card-color:#f6feff;
 $text-color:#fff;
 $bg-color:#f8f8f9;
