--- a/Projeto/src/app/components/card/card.component.scss
+++ b/Projeto/src/app/components/card/card.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .card {
   display: flex;
   justify-content: space-between;
@@ -5,15 +7,19 @@
   margin: 40px auto;
   margin-bottom: 60px;
   width: 60%;
-  height: 300px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
+  height: 250px;
+  background-color: rgba($primary-color, 0.1);
+  border: 1px solid rgba($primary-color, 0.3);
   border-radius: 10px;
   padding: 10px;
-  cursor: pointer;
-  transition: transform 0.2s ease;
 
-  &:hover {
-    transform: scale(1.05);
-  }
+
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  box-shadow: 0 0 0px 0px rgba(167, 187, 62, 0.0);
+
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px 5px rgba($primary-color, 0.5);
+    }
 }
