--- a/Projeto/src/app/components/characters/characters.component.scss
+++ b/Projeto/src/app/components/characters/characters.component.scss
@@ -2,6 +2,7 @@
   border-radius: 10px;
   height: 80%;
   margin-left: 5%;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .character-details {
@@ -9,7 +10,7 @@
   text-align: center;
 
   h3{
-    font-size: 40px;
+    font-size: 30px;
   }
 
   p{
