--- a/Projeto/src/app/components/characters/characters.component.html
+++ b/Projeto/src/app/components/characters/characters.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div *ngFor="let character of characters; trackBy: trackById" (click)="openModal(character)">
-    <app-card>
+  <div *ngFor="let character of characters; trackBy: trackById">
+    <app-card (cardClick)="openModal(character)">
       <img class="character-image" [src]="character.image" alt="{{ character.name }}">
       <div class="character-details">
         <h3>{{ character.name }}</h3>
