--- a/Projeto/src/app/components/modal/modal.component.scss
+++ b/Projeto/src/app/components/modal/modal.component.scss
@@ -11,15 +11,18 @@
 }
 
 .modal-content {
+  position: relative;
   background-color: white;
   padding: 20px;
   border-radius: 10px;
-  width: 50%;
+  width: 60%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .close-button {
-  float: right;
+  position: absolute;
+  right: 20px;
+  top: 10px;
   font-size: 28px;
   cursor: pointer;
 }
