--- a/Projeto/src/app/components/episodes/episodes.component.scss
+++ b/Projeto/src/app/components/episodes/episodes.component.scss
@@ -36,3 +36,26 @@
   color: #555;
   animation: spin 2s linear infinite;
 }
+
+@media (max-width: 767px) {
+  .container>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .episode-details {
+      text-align: center;
+      order: 1;
+
+      h3 {
+        font-size: 32px;
+      }
+
+      p {
+        padding-top: 20px;
+        font-size: 20px;
+      }
+    }
+  }
+
+}
